Effect in place, current conditions load (video 2.6)

--- a/src/app/current-conditions/current-conditions.component.html
+++ b/src/app/current-conditions/current-conditions.component.html
@@ -1,8 +1,21 @@
-<div *ngFor="let zip of zipcodes" class="well flex">
-  <div>
-    <h3>{{zip}}</h3>
-  </div>
-  <div>
-    <span class="close">&times;</span>
+<div>
+  <div *ngFor="let zip  of zipcodes" class="well flex" (click)="showForecast(zip)">
+    <div>
+      <h3>{{getConditions(zip)?.name}} ({{zip}})</h3>
+      <h4>Current conditions: {{getConditions(zip)?.weather[0].main}}</h4>
+      <h4>Temperatures today:</h4>
+      <p>
+        Current {{getConditions(zip)?.main.temp | number:'.0-0'}}
+        - Max {{getConditions(zip)?.main.temp_max | number:'.0-0'}}
+        - Min {{getConditions(zip)?.main.temp_min | number:'.0-0'}}
+      </p>
+      <p>
+        <a [routerLink]="['/forecast', zip]" >Show 5-day forecast for {{getConditions(zip)?.name}}</a>
+      </p>
+    </div>
+    <div>
+      <span class="close" (click)="removeZip(zip)">&times;</span>
+      <img [src]="weatherService.getWeatherIcon(getConditions(zip)?.weather[0].id)">
+    </div>
   </div>
 </div>
