--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -1,6 +1,7 @@
 <div class="container-fluid">
 
-  <app-zipcode-entry> </app-zipcode-entry>
-  <app-current-conditions></app-current-conditions>
+  <app-zipcode-entry (zipAdded)="addLocation($event)"> </app-zipcode-entry>
+  <app-current-conditions [zipcodes]="zipcodes" [currentConditions]="currentConditions" (zipRemoved)="removeZip($event)">
 
+  </app-current-conditions>
 </div>
